--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
-  margin: 0;
-  font-family: monospace;
+  margin: 2;
+  font-family: New Courier;
 }
 
-.topnav {
+.Navi {
   overflow: hidden;
   background-color: #B983FF;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
 }
 
-.topnav a {
+.Navi a {
   display: flex;
   float: right;
   color: #000000;
@@ -25,7 +25,7 @@ body {
   
 }
 
-.topnav a:hover {
+.Navi a:hover {
   background-color: #94B3FD;
   color: black;
 }
@@ -33,11 +33,11 @@ body {
 </head>
 <body>
 
-<div class="topnav">
-  <a class="active" href="#home">About</a>
-  <a href="Contact.html">Contact</a>
-  <a href="#contact">News</a>
-  <a href="#about">Home</a>
+<div class="Navi">
+  <a class="active" href="#">About</a>
+  <a href="#">Contact</a>
+  <a href="#">News</a>
+  <a href="#">Home</a>
 </div>
 <div class="Main">
 
